--- a/src/app/modules/category/components/category/category.component.html
+++ b/src/app/modules/category/components/category/category.component.html
@@ -47,10 +47,13 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions</th>
         <td mat-cell *matCellDef="let element; let i = index; ">
-          <button mat-icon-button color="accent">
+          
+          <!-- Edit button -->
+          <button mat-icon-button color="accent" (click)="edit( element.id, element.name, element.description )">
             <mat-icon aria-laabel="Edit"> edit </mat-icon>
           </button>
 
+          <!-- Delete Button -->
           <button mat-icon-button color="accent">
             <mat-icon aria-laabel="Delete"> delete </mat-icon>
           </button>
