--- a/src/app/modules/category/components/category/category.component.html
+++ b/src/app/modules/category/components/category/category.component.html
@@ -54,7 +54,7 @@
           </button>
 
           <!-- Delete Button -->
-          <button mat-icon-button color="accent">
+          <button mat-icon-button color="accent" (click)="delete( element.id )">
             <mat-icon aria-laabel="Delete"> delete </mat-icon>
           </button>
 
