Busqueda de categoria por id

--- a/src/app/modules/category/components/category/category.component.html
+++ b/src/app/modules/category/components/category/category.component.html
@@ -6,7 +6,7 @@
     <div class="">
       <mat-form-field hintLabel="Buscar" appearance="fill">
         <mat-label> Buscar </mat-label>
-        <input matInput #input>
+        <input matInput #input (keyup)="buscar(input.value)">
       </mat-form-field>
     </div>
   </mat-card-header>
